--- a/nodev10/helloapp/public/stylesheets/style.css
+++ b/nodev10/helloapp/public/stylesheets/style.css
@@ -5,7 +5,6 @@ body {
 
 a {
   	color: #00B7FF;
-	margin:25px;
 }
 
 	.Page_Header{
@@ -19,4 +18,7 @@ a {
 		text-align:center;
 		font-weight:bold;
 		margin:15px;
+	}
+	.Nav_BarSpacing{
+			margin:25px;
 	}
