--- a/nodev10/helloapp/views/layout.pug
+++ b/nodev10/helloapp/views/layout.pug
@@ -7,9 +7,9 @@ html
 	body
 		div.Page_Header All The Ciphers
 		div.Nav_Bar 
-			a(href="http://127.0.0.1:5000") Home
-			a(href="http://127.0.0.1:5000/ciphers/caesar") Caesar Cipher & ROT13
-			a(href="http://127.0.0.1:5000/ciphers/Substitution") Substitution Cipher
-			a(href="http://127.0.0.1:5000/ciphers/morse") Morse
+			a.Nav_BarSpacing(href="http://127.0.0.1:5000") Home
+			a.Nav_BarSpacing(href="http://127.0.0.1:5000/ciphers/caesar") Caesar Cipher & ROT13
+			a.Nav_BarSpacing(href="http://127.0.0.1:5000/ciphers/Substitution") Substitution Cipher
+			a.Nav_BarSpacing(href="http://127.0.0.1:5000/ciphers/morse") Morse
 		div.Grid_Layout
 			block content
