--- a/nodev10/helloapp/views/layout.pug
+++ b/nodev10/helloapp/views/layout.pug
@@ -3,7 +3,6 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
-	
 	body
 		div.Page_Header All The Ciphers
 		div.Nav_Bar 
@@ -13,3 +12,6 @@ html
 			a.Nav_BarSpacing(href="http://127.0.0.1:5000/ciphers/morse") Morse
 		div.Grid_Layout
 			block content
+block#test
+	script(type='text/javascript', src='/javascripts/changecipher.js',onload="changecipher()")
+	script(type='text/javascript', src='/javascripts/changemethod.js')
