--- a/nodev10/coursework/views/layout.pug
+++ b/nodev10/coursework/views/layout.pug
@@ -5,4 +5,9 @@ html
       title= title
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div.Page_Header All The Ciphers
+      block extranav
+        div.Nav_Bar 
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000") Home
+      div.Grid_Layout
+        block content
