started implementing ciphering messages

--- a/nodev10/coursework/views/layout.pug
+++ b/nodev10/coursework/views/layout.pug
@@ -8,6 +8,9 @@ html
     div.Page_Header All The Ciphers
       block extranav
         div.Nav_Bar 
-          a.Nav_BarSpacing(href="http://127.0.0.1:5000") Home
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000") Home |
+		  
+		  
+		  
       div.Grid_Layout
         block content
