passwords now use bcrypt

--- a/nodev10/coursework/views/message.pug
+++ b/nodev10/coursework/views/message.pug
@@ -1,5 +1,5 @@
 extends layout
-append extranav
+replace extranav
         a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages") Your Messages |
         a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages/send") Send A Message |
 		  
