--- a/nodev10/coursework/views/loginorregister.pug
+++ b/nodev10/coursework/views/loginorregister.pug
@@ -1,7 +1,7 @@
-extends layout
+extends index
 
-block content
-  h1= title
+append content
+  p to access your messages or to send a message, login or create an account by using the links below!
   p 
     a.Nav_BarSpacing(href="http://127.0.0.1:5000/login") login
   p 
