--- a/nodev10/coursework/views/loggedout/layout.pug
+++ b/nodev10/coursework/views/loggedout/layout.pug
@@ -8,9 +8,10 @@ html
     div.Page_Header All The Ciphers
       block extranav
         div.Nav_Bar 
-          a.Nav_BarSpacing(href="http://127.0.0.1:5000") Home |
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000") |Home|
 		  
-		  
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000/login") |Login|
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000/register") |Register|
 		  
       div.Grid_Layout
         block content
