implemented logout, other fixes included

--- a/nodev10/coursework/views/loggedin/layout.pug
+++ b/nodev10/coursework/views/loggedin/layout.pug
@@ -9,7 +9,8 @@ html
       block extranav
         div.Nav_Bar 
           a.Nav_BarSpacing(href="http://127.0.0.1:5000") |Home|
-          a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages") Your Messages |
-          a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages/send") Send A Message |
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages") |Your Messages|
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages/send") |Send A Message|
+          a.Nav_BarSpacing(href="http://127.0.0.1:5000/logout") |Logout|
       div.Grid_Layout
         block content
