alot of reworkling and tweaking

--- a/nodev10/coursework/views/loggedin/layout.pug
+++ b/nodev10/coursework/views/loggedin/layout.pug
@@ -5,12 +5,13 @@ html
       title= title
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    div.Page_Header All The Ciphers
+    div.Page_Header 
+      h1 All The Ciphers
       block extranav
         div.Nav_Bar 
           a.Nav_BarSpacing(href="http://127.0.0.1:5000") |Home|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages") |Your Messages|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages/send") |Send A Message|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/logout") |Logout|
-      div.Grid_Layout
+    div.Grid_Layout
         block content
