--- a/nodev10/coursework/views/loggedout/index.pug
+++ b/nodev10/coursework/views/loggedout/index.pug
@@ -3,4 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  
+  p You may setup a account and message other people. this will allow you to choose ciphers that are used to cipher the messages while they are stationary.
+  p Please create an account or log in with the links above.
