--- a/nodev10/coursework/public/stylesheets/style.css
+++ b/nodev10/coursework/public/stylesheets/style.css
@@ -1,9 +1,37 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+html {
+  height: 100%
 
+}
+body {
+	font-family: 'Raleway', sans-serif;
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  padding: 50px;
+font-size:15px;
+  background: linear-gradient(to bottom, rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%);
+  /*background: linear-gradient(to bottom, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
 a {
-  color: #00B7FF;
+  color: #f2825b;
   padding: 10px;
+}
+.Nav_Bar{
+		text-align:center;
+		font-weight:bold;
+		margin:15px;
+	}
+
+.Page_Header{
+	text-align:center;
+		font-size:20px;
+		font-weight:bold;
+		margin:25px;
+		color:white;
+}
+.heading{
+	text-align:center;
+		font-size:20px;
 }
