added updatying password functionality, final functinality update in theory

--- a/nodev10/coursework/views/loggedin/layout.pug
+++ b/nodev10/coursework/views/loggedin/layout.pug
@@ -12,6 +12,7 @@ html
           a.Nav_BarSpacing(href="http://127.0.0.1:5000") |Home|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages") |Your Messages|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/messages/send") |Send A Message|
+		  a.Nav_BarSpacing(href="http://127.0.0.1:5000/user/update") |Send A Message|
           a.Nav_BarSpacing(href="http://127.0.0.1:5000/logout") |Logout|
     div.Grid_Layout
         block content
