--- a/nodev10/coursework/views/loggedin/update.pug
+++ b/nodev10/coursework/views/loggedin/update.pug
@@ -7,10 +7,10 @@ block content
   h3= extra
   form(method="POST" action='')
     div.form-group
-      label(for='oldpassword') oldpassword:
+      label(for='oldpassword') Old Password:
       input#oldpassword.form-control(type='password', name='oldpassword')
     div.form-group
-      label(for='newpassword') newpassword:
+      label(for='newpassword') New Password:
       input#newpassword.form-control(type='password', name='newpassword')
     div.form-group#InputArea
     button.btn.btn-primary(type='submit') Send Message
